añadido boton para que se pueda mover

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    
+    <button id="dado">Dado</button>
 </body>
 </html>
