--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    <button id="dado">Dado</button>
+   <!--<button id="dado">Dado</button>-->
+    <h1>Elige tu nombre</h1>
+    <form method="post">
+        <p>
+            <lable for="nombre">Nombre: </lable>
+            <input id="nombre" type="text" name="nombre">
+            <input type="button" id="jugar" >Jugar</input>
+        </p>
+    </form>
 </body>
 </html>
