ya funciona el login

--- a/html/index.html
+++ b/html/index.html
@@ -11,11 +11,11 @@
 <body>
    <!--<button id="dado">Dado</button>-->
     <h1>Elige tu nombre</h1>
-    <form method="post">
+    <form id="formulario" method="post">
         <p>
             <lable for="nombre">Nombre: </lable>
             <input id="nombre" type="text" name="nombre">
-            <input type="button" id="jugar" >Jugar</input>
+            <input type="submit" id="jugar" value="jugar" >
         </p>
     </form>
 </body>
