--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 <body>
    <!--<button id="dado">Dado</button>-->
     <h1>Elige tu nombre</h1>
-    <form id="formulario" method="post">
+    <form id="formulario" method="post" content="text/plain">
         <p>
             <lable for="nombre">Nombre: </lable>
             <input id="nombre" type="text" name="nombre">
