añadido fuentes de google fonts

--- a/html/index.html
+++ b/html/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El juego</title>
     <script type="module" src="../js/main.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
 </head>
+
 <body>
-   <!--<button id="dado">Dado</button>-->
     <h1>Elige tu nombre</h1>
     <form id="formulario" method="post" content="text/plain">
         <p>
             <lable for="nombre">Nombre: </lable>
             <input id="nombre" type="text" name="nombre">
-            <input type="submit" id="jugar" value="jugar" >
+            <input type="submit" id="jugar" value="jugar">
         </p>
     </form>
 </body>
+
 </html>
