--- a/html/index.html
+++ b/html/index.html
@@ -14,14 +14,17 @@
 </head>
 
 <body>
-    <h1>Elige tu nombre</h1>
+    <div class="container">
+        <h2>Elige tu nombre</h2>
     <form id="formulario" method="post" content="text/plain">
-        <p>
             <lable for="nombre">Nombre: </lable>
             <input id="nombre" type="text" name="nombre">
-            <input type="submit" id="jugar" value="jugar">
-        </p>
+            <p>
+                <input type="submit" id="jugar" value="Jugar">
+                <input type="button" id="puntuaciones" value="Ver puntuaciones">
+            </p>
     </form>
+    </div>
 </body>
 
 </html>
