--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,8 @@
             <lable for="nombre">Nombre: </lable>
             <input id="nombre" type="text" name="nombre">
             <p>
-                <input type="submit" id="jugar" value="Jugar">
+                <input type="button" id="comprobarNombre" value="Comprobar Nombre"> 
+                <input type="submit" id="jugar" value="Jugar" disabled>
                 <input type="button" id="puntuaciones" value="Ver puntuaciones">
             </p>
     </form>
