--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,7 @@
                 <input type="button" id="comprobarNombre" value="Comprobar Nombre"> 
                 <input type="submit" id="jugar" value="Jugar" disabled>
                 <input type="button" id="puntuaciones" value="Ver puntuaciones">
+                <input type="button" id="instrucciones" value="Como jugar">
             </p>
     </form>
     </div>
